--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
     },
     "autoload": {
         "psr-4": {
-            "AndreasElia\\Analytics\\": "src/",
-            "AndreasElia\\Analytics\\Database\\Factories\\": "database/factories"
+            "AndreasElia\\Analytics\\": "src/"
         }
     },
     "autoload-dev": {
