--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,6 @@
 /.travis.yml        export-ignore
 /phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
-/readme.md
+/readme.md          export-ignore
 /tests              export-ignore
 /.editorconfig      export-ignore
