add screenshot to gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@
 /readme.md          export-ignore
 /tests              export-ignore
 /.editorconfig      export-ignore
+/screenshot.png     export-ignore
