--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "illuminate/database": "^8.0|^9.0|^10.0",
         "illuminate/collections": "^8.0|^9.0|^10.0",
         "illuminate/http": "^8.0|^9.0|^10.0",
-        "illuminate/view": "^8.0|^9.|^10.00",
+        "illuminate/view": "^8.0|^9.0|^10.0",
         "jenssegers/agent": "^2.6"
     },
     "autoload": {
