Add filter for dashboard based on uri

--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,8 @@
     "require-dev": {
         "orchestra/testbench": "6.0",
         "phpunit/phpunit": "^9.5"
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
