--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,8 @@
     "require-dev": {
         "orchestra/testbench": "6.0|^9.0",
         "phpunit/phpunit": "^9.5|^11.0"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
