--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,15 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-intl": "*",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/collections": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/http": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/view": "^8.0|^9.0|^10.0|^11.0",
-        "jenssegers/agent": "^2.6"
+        "mobiledetect/mobiledetectlib": "^4.8",
+        "jaybizzle/crawler-detect": "^1.2"
     },
     "autoload": {
         "psr-4": {
