--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^8.0",
         "ext-intl": "*",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
