Add doctrine/dbal package to change columns

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "illuminate/collections": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/http": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/view": "^8.0|^9.0|^10.0|^11.0",
-        "jenssegers/agent": "^2.6"
+        "jenssegers/agent": "^2.6",
+        "doctrine/dbal": "^4.0"
     },
     "autoload": {
         "psr-4": {
