--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "illuminate/http": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/view": "^8.0|^9.0|^10.0|^11.0",
         "jenssegers/agent": "^2.6",
-        "doctrine/dbal": "^3.0"
+        "jaybizzle/crawler-detect": "^1.2",
+        "doctrine/dbal": "^3.0",
+        "mobiledetect/mobiledetectlib": "^2.7.6"
     },
     "autoload": {
         "psr-4": {
