--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
     "require": {
         "php": "^7.4|^8.0",
         "ext-intl": "*",
-        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/collections": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/http": "^8.0|^9.0|^10.0|^11.0",
-        "illuminate/view": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/collections": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/http": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/view": "^8.0|^9.0|^10.0|^11.0|^12.0",
         "jenssegers/agent": "^2.6",
         "jaybizzle/crawler-detect": "^1.2",
         "doctrine/dbal": "^3.0",
